--- a/Game/index.html
+++ b/Game/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="utf-8">
     <title>Game Project Title Goes Here</title>
-  
+    <script type="text/javascript" src="./arenaFactory.js"></script>
+    <script type="text/javascript" src="./backgroundFactory.js"></script>
     <script type="text/javascript" src="./assetmanager.js"></script>
     <script type="text/javascript" src="./timer.js"></script>
     <script type="text/javascript" src="./gameengine.js"></script>
