Moved index to root

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>Game Project Title Goes Here</title>
+    <script type="module" src="Matrix/Matrix.js"></script>
   
     <script type="text/javascript" src="./Game/assetmanager.js"></script>
     <script type="text/javascript" src="./Game/timer.js"></script>
