--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <title>Game Project Title Goes Here</title>
     <script type="module" src="Matrix/Matrix.js"></script>
   
-    <script type="text/javascript" src="./Game/assetmanager.js"></script>
-    <script type="text/javascript" src="./Game/timer.js"></script>
-    <script type="text/javascript" src="./Game/gameengine.js"></script>
-    <script type="text/javascript" src="./Game/util.js"></script>
-    <script type="text/javascript" src="./Game/main.js"></script>
+    <script type="module" src="./Game/assetmanager.js"></script>
+    <script type="module" src="./Game/timer.js"></script>
+    <script type="module" src="./Game/gameengine.js"></script>
+    <script type="module" src="./Game/util.js"></script>
+    <script type="module" src="./Game/main.js"></script>
 </head>
 <body>
     <canvas id="gameWorld" width="1024" height="768" style="background: white; border: 1px solid black" tabindex="0" autofocus></canvas>
