--- a/index.html
+++ b/index.html
@@ -6,7 +6,18 @@
     <title>Game Project Title Goes Here</title>
     <script type="module" src="./Game/main.js"></script>
 </head>
-<body>
-    <canvas id="gameWorld" width="1024" height="768" style="background: white; border: 1px solid black" tabindex="0" autofocus></canvas>
+<body style="background: #261111">
+    <div style="
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        translate: -50% -50%;
+        padding: 20px;
+        box-shadow: red 10px 10px 50px;
+        background: darkred;
+    ">
+        <canvas id="gameWorld" width="1024" height="768" style="background: white; border: 1px solid black" tabindex="0" autofocus></canvas>
+        <p style="font-family: Impact, fantasy; font-size: 5rem;">Game</p>
+    </div>
 </body>
 </html>
