--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Game Project Title Goes Here</title>
+    <title>Untitled Game Project</title>
     <script type="module" src="./Game/main.js"></script>
+    <link rel="icon" href="assets/img/GuyPortrait.png" type="image/png">
 </head>
 <body style="background: #261111">
     <div style="
