--- a/Game/index.html
+++ b/Game/index.html
@@ -3,11 +3,25 @@
 <head>
     <meta charset="utf-8">
     <title>Game Project Title Goes Here</title>
+    <link href="style.css" rel="stylesheet"/>
+
 </head>
 <body>
-<canvas id="gameWorld" width="1024" height="768"
-        style="background: white; border: 1px solid black"
-        tabindex="0" autofocus></canvas>
+
+<div id="gameWrap">
+  <canvas id="gameWorld" width="1024" height="768"
+          style="background: white; border: 1px solid black"
+          tabindex="0" autofocus></canvas>
+
+  <div class="instruction-labels">
+    <label class="instruction">
+      [Press 1 to switch player 1 character.] [Press 2 to switch player 2 character.]
+    </label>
+  </div>
+</div>
+
+
+
 
 <!-- one entrypoint -->
 <script type="module" src="./main.js"></script>
