--- a/index.html
+++ b/index.html
@@ -24,6 +24,6 @@
 
 
 <!-- one entrypoint -->
-<script type="module" src="./main.js"></script>
+<script type="module" src="./Game/main.js"></script>
 </body>
 </html>
