Completed the character switching function for the prototype.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 
   <div class="instruction-labels">
     <label class="instruction">
-      [Press 1 to switch player 1 character.] [Press 2 to switch player 2 character.]
+      [Press 1 to switch player 1 character.] [Press 2 to switch player 2 character.] [Player 1: WASD] [Player 2:
+        Arrow keys]
     </label>
   </div>
 </div>
