updated the characterFactory so that it uses characterData data.

--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 ﻿
 <!DOCTYPE html>
-<html>
+<html lang="EN">
 <head>
     <meta charset="utf-8">
     <title>Untitled Game Project</title>
     <script type="module" src="./Game/main.js"></script>
-    <link rel="icon" href="assets/img/GuyPortrait.png" type="image/png">
+<!--    <link rel="icon" href="assets/img/GuyPortrait.png" type="image/png">-->
 </head>
 <body style="background: #261111">
     <div style="
