--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>Arena Fighters</title>
-    <link href="Game/style.css" rel="stylesheet"/>
+    <link href="./style.css" rel="stylesheet"/>
 </head>
 <body>
 
