moved files around to organize

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 </div>
 
 <!-- Menu and Game Logic Script -->
-<script type="module" src="Game/menu.js"></script>
+<script type="module" src="userInterface/menu.js"></script>
 <!-- Main Game Script -->
 <script type="module" src="Game/main.js"></script>
 </body>
