moved game to start not from `main.js`, but to start whenever it's ready to be started by a function call in `gameLauncher.js`

--- a/index.html
+++ b/index.html
@@ -177,6 +177,6 @@
 <!-- Menu and Game Logic Script -->
 <script type="module" src="userInterface/menu.js"></script>
 <!-- Main Game Script -->
-<script type="module" src="Game/main.js"></script>
+<!--<script type="module" src="Game/main.js"></script>-->
 </body>
 </html>
