--- a/index.html
+++ b/index.html
@@ -28,6 +28,35 @@
                         <div class="char-preview"></div>
                         <span>Valkyrie</span>
                     </button>
+                    <button class="character-btn" data-player="1" data-character="Samurai1">
+                        <div class="char-preview"></div>
+                        <span>Samurai1</span>
+                    </button>
+                     <button class="character-btn" data-player="1" data-character="Samurai2">
+                        <div class="char-preview"></div>
+                        <span>Samurai2</span>
+                    </button>
+                     <button class="character-btn" data-player="1" data-character="monk">
+                        <div class="char-preview"></div>
+                        <span>Monk</span>
+                    </button>
+                     <button class="character-btn" data-player="1" data-character="skeleton">
+                        <div class="char-preview"></div>
+                        <span>Skeletone</span>
+                    </button>
+                    <button class="character-btn" data-player="1" data-character="minotaur">
+                        <div class="char-preview"></div>
+                        <span>Minotaur</span>
+                    </button>
+                    <button class="character-btn" data-player="1" data-character="mage">
+                        <div class="char-preview"></div>
+                        <span>Mage</span>
+                    </button>
+                    <button class="character-btn" data-player="1" data-character="ninja">
+                        <div class="char-preview"></div>
+                        <span>Ninja</span>
+                    </button>
+
                 </div>
                 <div class="selected-character" id="p1Selected">Select Character</div>
             </div>
@@ -49,6 +78,35 @@
                         <div class="char-preview"></div>
                         <span>Valkyrie</span>
                     </button>
+                    <button class="character-btn" data-player="2" data-character="Samurai1">
+                        <div class="char-preview"></div>
+                        <span>Samurai1</span>
+                    </button>
+                     <button class="character-btn" data-player="2" data-character="Samurai2">
+                        <div class="char-preview"></div>
+                        <span>Samurai2</span>
+                    </button>
+                     <button class="character-btn" data-player="2" data-character="monk">
+                        <div class="char-preview"></div>
+                        <span>Monk</span>
+                    </button>
+                     <button class="character-btn" data-player="2" data-character="skeleton">
+                        <div class="char-preview"></div>
+                        <span>Skeletone</span>
+                    </button>
+                    <button class="character-btn" data-player="2" data-character="minotaur">
+                        <div class="char-preview"></div>
+                        <span>Minotaur</span>
+                    </button>
+                    <button class="character-btn" data-player="2" data-character="mage">
+                        <div class="char-preview"></div>
+                        <span>Mage</span>
+                    </button>
+                    <button class="character-btn" data-player="2" data-character="ninja">
+                        <div class="char-preview"></div>
+                        <span>Ninja</span>
+                    </button>
+                    
                 </div>
                 <div class="selected-character" id="p2Selected">Select Character</div>
             </div>
