added characters images to the character select

--- a/index.html
+++ b/index.html
@@ -18,43 +18,53 @@
                 <div class="character-options">
                     <button class="character-btn" data-player="1" data-character="guy1">
                         <div class="char-preview"></div>
-                        <span>Warrior</span>
+                        <img class="char-preview-img" src="./Game/assets/character/guy1/Guy_img.png" alt="Warrior">
+                        <span>Warrior1</span>
                     </button>
                     <button class="character-btn" data-player="1" data-character="guy2">
                         <div class="char-preview"></div>
+                        <img class="char-preview-img" src="./Game/assets/character/guy2/Guy2_img.png" alt="Warrior2">
+                        <span>Warrior2</span>
+                    </button>
+                    <button class="character-btn" data-player="1" data-character="knight">
+                        <div class="char-preview"></div>
+                        <img class="char-preview-img" src="./Game/assets/character/knight/knight_img.png" alt="Knight">
                         <span>Knight</span>
                     </button>
                     <button class="character-btn" data-player="1" data-character="warriorWoman">
                         <div class="char-preview"></div>
+                        <img class="char-preview-img" src="./Game/assets/character/warriorWoman/warriorWoman_img.png" alt="Valkyrie">
                         <span>Valkyrie</span>
                     </button>
                     <button class="character-btn" data-player="1" data-character="Samurai1">
                         <div class="char-preview"></div>
+                        <img class="char-preview-img" src="./Game/assets/character/samurai/samurai_img.png" alt="Samurai1">
                         <span>Samurai1</span>
                     </button>
-                     <button class="character-btn" data-player="1" data-character="Samurai2">
+                    <button class="character-btn" data-player="1" data-character="Samurai2">
                         <div class="char-preview"></div>
+                        <img class="char-preview-img" src="./Game/assets/character/samurai/samurai2_img.png" alt="Samurai2">
                         <span>Samurai2</span>
                     </button>
-                     <button class="character-btn" data-player="1" data-character="monk">
+                    <button class="character-btn" data-player="1" data-character="monk">
                         <div class="char-preview"></div>
+                        <img class="char-preview-img" src="./Game/assets/character/monk/monk_img.png" alt="Monk">
                         <span>Monk</span>
                     </button>
-                     <button class="character-btn" data-player="1" data-character="skeleton">
+                    <button class="character-btn" data-player="1" data-character="skeleton">
                         <div class="char-preview"></div>
+                        <img class="char-preview-img" src="./Game/assets/character/skeleton/Skeleton_img.png" alt="Skeleton">
                         <span>Skeletone</span>
                     </button>
                     <button class="character-btn" data-player="1" data-character="minotaur">
                         <div class="char-preview"></div>
+                        <img class="char-preview-img" src="./Game/assets/character/minotaur/minotaur_img.png" alt="Minotaur">
                         <span>Minotaur</span>
                     </button>
                     <button class="character-btn" data-player="1" data-character="mage">
                         <div class="char-preview"></div>
+                        <img class="char-preview-img" src="./Game/assets/character/mage/mage_img.png" alt="Mage">
                         <span>Mage</span>
-                    </button>
-                    <button class="character-btn" data-player="1" data-character="ninja">
-                        <div class="char-preview"></div>
-                        <span>Ninja</span>
                     </button>
 
                 </div>
@@ -68,45 +78,55 @@
                 <div class="character-options">
                     <button class="character-btn" data-player="2" data-character="guy1">
                         <div class="char-preview"></div>
-                        <span>Warrior</span>
+                        <img class="char-preview-img" src="./Game/assets/character/guy1/Guy_img.png" alt="Warrior">
+                        <span>Warrior1</span>
                     </button>
                     <button class="character-btn" data-player="2" data-character="guy2">
                         <div class="char-preview"></div>
+                        <img class="char-preview-img" src="./Game/assets/character/guy2/Guy2_img.png" alt="Warrior2">
+                        <span>Warrior2</span>
+                    </button>
+                    <button class="character-btn" data-player="2" data-character="knight">
+                        <div class="char-preview"></div>
+                        <img class="char-preview-img" src="./Game/assets/character/knight/knight_img.png" alt="Knight">
                         <span>Knight</span>
                     </button>
-                    <button class="character-btn" data-player="2" data-character="warriorWoman">
+                    <button class="character-btn" data-player=2" data-character="warriorWoman">
                         <div class="char-preview"></div>
+                        <img class="char-preview-img" src="./Game/assets/character/warriorWoman/warriorWoman_img.png" alt="Valkyrie">
                         <span>Valkyrie</span>
                     </button>
                     <button class="character-btn" data-player="2" data-character="Samurai1">
                         <div class="char-preview"></div>
+                        <img class="char-preview-img" src="./Game/assets/character/samurai/samurai_img.png" alt="Samurai1">
                         <span>Samurai1</span>
                     </button>
-                     <button class="character-btn" data-player="2" data-character="Samurai2">
+                    <button class="character-btn" data-player="2" data-character="Samurai2">
                         <div class="char-preview"></div>
+                        <img class="char-preview-img" src="./Game/assets/character/samurai/samurai2_img.png" alt="Samurai2">
                         <span>Samurai2</span>
                     </button>
-                     <button class="character-btn" data-player="2" data-character="monk">
+                    <button class="character-btn" data-player="2" data-character="monk">
                         <div class="char-preview"></div>
+                        <img class="char-preview-img" src="./Game/assets/character/monk/monk_img.png" alt="Monk">
                         <span>Monk</span>
                     </button>
-                     <button class="character-btn" data-player="2" data-character="skeleton">
+                    <button class="character-btn" data-player="2" data-character="skeleton">
                         <div class="char-preview"></div>
+                        <img class="char-preview-img" src="./Game/assets/character/skeleton/Skeleton_img.png" alt="Skeleton">
                         <span>Skeletone</span>
                     </button>
                     <button class="character-btn" data-player="2" data-character="minotaur">
                         <div class="char-preview"></div>
+                        <img class="char-preview-img" src="./Game/assets/character/minotaur/minotaur_img.png" alt="Minotaur">
                         <span>Minotaur</span>
                     </button>
                     <button class="character-btn" data-player="2" data-character="mage">
                         <div class="char-preview"></div>
+                        <img class="char-preview-img" src="./Game/assets/character/mage/mage_img.png" alt="Mage">
                         <span>Mage</span>
                     </button>
-                    <button class="character-btn" data-player="2" data-character="ninja">
-                        <div class="char-preview"></div>
-                        <span>Ninja</span>
-                    </button>
-                    
+
                 </div>
                 <div class="selected-character" id="p2Selected">Select Character</div>
             </div>
